unpackaged/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>BB_Quantity__c</fullName>
        <label>BB Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Click_URL__c</fullName>
        <label>Click URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Product (Device)</relationshipLabel>
        <relationshipName>Opportunity_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Evenmore_for_BIZ_Pool_Calculation__c</fullName>
        <formula>((220 + (40 * ( Quantity -5))) / Quantity)</formula>
        <label>Evenmore for BIZ Pool Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Feature</relationshipLabel>
        <relationshipName>Opportunity_Feature</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Handset_Subsidy_Amount2__c</fullName>
        <formula>PricebookEntry.Product2.Minimum_Price__c - UnitPrice</formula>
        <label>Handset Subsidy Amount2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Handset_Subsidy_Amount__c</fullName>
        <description>DO NOT DELETE THIS IS FOR ROLLUP SUMMARY ON OPPORTUNITY</description>
        <label>Handset Subsidy Amount</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUpgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsUpgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Promo_Code__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Promo Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss__c</fullName>
        <label>Loss</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Price__c</fullName>
        <label>Minimum Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mix__c</fullName>
        <label>Mix %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_Discountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <picklist>
            <picklistValues>
                <fullName>Alcatel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB HTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Huawei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB LG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Nokia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB RIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB Samsung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SB_COB ZTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>h</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHP_CCPU_Value__c</fullName>
        <formula>IF( PricebookEntry.Product2.SOC__c  = &quot;PHP799&quot;,  ListPrice -3.60,
IF(PricebookEntry.Product2.SOC__c = &quot;PHP479&quot;, ListPrice -1.92,0))</formula>
        <label>PHP CCPU Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Override__c</fullName>
        <label>Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Cost__c</fullName>
        <formula>PricebookEntry.Product2.Cost__c</formula>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Broadband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartphone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Type_2__c</fullName>
        <formula>TEXT(PricebookEntry.Product2.Rate_Plan_Type__c)</formula>
        <label>Rate Plan Type 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Type__c</fullName>
        <label>Rate Plan Type</label>
        <picklist>
            <picklistValues>
                <fullName>Voice Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both Data and Voice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Rate</relationshipLabel>
        <relationshipName>Opportunity_Rate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remorse_and_Warranty_Total_Device__c</fullName>
        <formula>Quantity *  Remorse_and_Warranty_per_device__c</formula>
        <label>Remorse and Warranty Total Device</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remorse_and_Warranty_Total_Rollup__c</fullName>
        <defaultValue>0</defaultValue>
        <description>DO NOT DELETE USED FOR ROLLUP PURPOSES.</description>
        <label>Remorse and Warranty Total (Rollup)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remorse_and_Warranty_per_device__c</fullName>
        <label>Remorse and Warranty Per Device</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rep_Price__c</fullName>
        <label>Rep Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SF_Parent_Bundle_OLI_Discount__c</fullName>
        <label>SF Parent Bundle OLI Discount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SF_Parent_Bundle_OLI_Id__c</fullName>
        <label>SF Parent Bundle OLI Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Parent_Bundle_OLI_Quantity__c</fullName>
        <label>SF Parent Bundle OLI Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SOC_Code__c</fullName>
        <label>SOC Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Costs__c</fullName>
        <formula>Product_Cost__c  *  Quantity</formula>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Handset_Subsidy__c</fullName>
        <formula>IF(
ISPICKVAL( Product_Family__c , &quot;Device&quot;), Total_Costs__c - TotalPrice, 0)</formula>
        <label>Total Handset Subsidy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value_Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>index__c</fullName>
        <label>index</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Only_1_Family_Allowance</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Product2.ProductCode  = &quot;Family Allowance&quot;,  Quantity &gt;1)</errorConditionFormula>
        <errorMessage>You can only have Family Allowance for one (1) line.  Please revise and save again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_1_I_Analyst</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Product2.ProductCode = &quot;I-Analyst&quot;,  Quantity &gt;1)</errorConditionFormula>
        <errorMessage>You can only have the I-Analyst feature for one (1) line.  Please revise and save again.</errorMessage>
    </validationRules>
</CustomObject>